--- a/wp-content/themes/baseAppLabo_v3/package.json
+++ b/wp-content/themes/baseAppLabo_v3/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "base-app-labo_v2",
+  "name": "base_app_labo_v3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "postcss style.css -o tailwind.css",
-    "dev": "vite"
+    "dev": "postcss style.css -o tailwind.css",
+    "watch": "postcss style.css -o tailwind.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,6 @@
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.7",
-    "vite": "^2.4.4"
+    "tailwindcss": "^2.2.7"
   }
 }
