add modal function

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 wp-content/themes/baseAppLabo/node_modules
 wp-content/themes/baseAppLabo_v2/node_modules
 wp-content/themes/baseAppLabo_v3/node_modules
+wp-content/themes/baseAppLabo_v4/node_modules
