--- a/dockerfiles/nginx/config/donoteditthisfile.conf
+++ b/dockerfiles/nginx/config/donoteditthisfile.conf
@@ -1,1 +1,1 @@
-ORIGURL="localhost" ORIGSUBDOMAINS="www," ORIGONLY_SUBDOMAINS="false" ORIGEXTRA_DOMAINS="" ORIGVALIDATION="http" ORIGDNSPLUGIN="" ORIGPROPAGATION="" ORIGSTAGING="false" ORIGDUCKDNSTOKEN=""
+ORIGURL="chikaukume.tk" ORIGSUBDOMAINS="www," ORIGONLY_SUBDOMAINS="false" ORIGEXTRA_DOMAINS="" ORIGVALIDATION="http" ORIGDNSPLUGIN="" ORIGPROPAGATION="" ORIGSTAGING="true" ORIGDUCKDNSTOKEN=""
