--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ wp-content/themes/baseAppLabo/node_modules
 wp-content/themes/baseAppLabo_v2/node_modules
 wp-content/themes/baseAppLabo_v3/node_modules
 wp-content/themes/homepage/node_modules
+.env
