--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
-      LETSENCRYPT_HOST: ${LETSENCRYPT_HOST}
-      LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
     volumes:
       - ./:/var/www/html
 
@@ -48,7 +46,7 @@ services:
       - URL=chikaukume.tk
       - SUBDOMAINS=www,
       - VALIDATION=http
-      - STAGING=false #optional
+      - STAGING=true #optional
 
 volumes:
   wordpress:
