--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,29 @@ version: '3.1'
 services:
 
   # SSL対応 Production
-  # https-portal:
-  #   image: steveltn/https-portal:1
-  #   container_name: web_https-portal
-  #   ports:
-  #     - 80:80
-  #     - 443:443
-  #   depends_on:
-  #     - nginx
-  #   restart: always
-  #   volumes:
-  #     - ./dockerfiles/certs:/var/lib/https-portal
-  #   environment:
-  #     STAGE: 'production'
-  #     DOMAINS: >-
-  #       chikaukume.tk -> http://nginx
-  #     WORKER_PROCESSES: auto
-  #     WORKER_CONNECTIONS: 2048
-  #     CLIENT_MAX_BODY_SIZE: '128M'
+  https-portal:
+    image: steveltn/https-portal:1
+    container_name: web_https-portal
+    ports:
+      - 80:80
+      - 443:443
+    depends_on:
+      - nginx
+    restart: always
+    volumes:
+      - ./dockerfiles/certs:/var/lib/https-portal
+    environment:
+      STAGE: 'production'
+      DOMAINS: >-
+        chikaukume.tk -> http://nginx
+      WORKER_PROCESSES: auto
+      WORKER_CONNECTIONS: 2048
+      CLIENT_MAX_BODY_SIZE: '128M'
 
   # Nginx
   nginx:
     image: nginx:stable
     container_name: web_nginx
-    ports: 
-      - 80:80
     volumes:
       - ./dockerfiles/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./dockerfiles/nginx/conf.d:/etc/nginx/conf.d
