--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ wp-content/themes/baseAppLabo_v2/node_modules
 wp-content/themes/baseAppLabo_v3/node_modules
 wp-content/themes/homepage/node_modules
 .env
+dockerfiles/nginx/log
