--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ wp-content/themes/baseAppLabo_v2/node_modules
 wp-content/themes/baseAppLabo_v3/node_modules
 wp-content/themes/homepage/node_modules
 .env
-dockerfiles/nginx/log
+dockerfiles/nginx/log/access.log
+dockerfiles/nginx/log/error.log
